force-app/main/default/objects/Flight__c/fields/Arrival_Airport__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Airport__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Airport</label>
    <length>50</length>
    <type>Text</type>
</CustomField>