force-app/main/default/objects/Flight__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Arrival Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>