force-app/main/default/objects/Flight__c/fields/Coupon_Number__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Coupon Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>