force-app/main/default/objects/Flight__c/fields/Departure_Time__c.field-meta.xml
<CustomField>
    <fullName>Departure_Time__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Departure Time</label>
    <length>8</length>
    <type>Text</type>
</CustomField>