force-app/main/default/objects/Flight__c/fields/Fare_Basis__c.field-meta.xml
<CustomField>
    <fullName>Fare_Basis__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fare Basis</label>
    <length>20</length>
    <type>Text</type>
</CustomField>