force-app/main/default/objects/Flight__c/fields/Flight_Departure_Time_and_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Departure_Time_and_Date__c</fullName>
    <formula>IF(RecordType.DeveloperName == &quot;Service_Request&quot; &amp;&amp; NOT(ISBLANK(Flight_Date__c)) &amp;&amp; Departure_Time__c != &quot;&quot;,
Value(
IF(
Month(Flight_Date__c)&lt;10,
&quot;0&quot;&amp; TEXT(MONTH((Flight_Date__c))),
TEXT(Month(Flight_Date__c))) &amp;
IF(
DAY(Flight_Date__c)&lt;10,
&quot;0&quot;&amp;TEXT(DAY((Flight_Date__c))),
TEXT(DAY(Flight_Date__c))) &amp;
TEXT(Year(Flight_Date__c))

)+ Value(LEFT(Departure_Time__c, 2)) +
Value(RIGHT(Departure_Time__c, 2)),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flight Departure Time and Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>