force-app/main/default/objects/Flight__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>