force-app/main/default/objects/Flight__c/fields/Freight_Arrival_Flight_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Freight_Arrival_Flight_Date_Time__c</fullName>
    <description>Provided by Elenium while raising Exception against Freight Track &amp; Trace</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Freight: Flight Date Time of a Arrival Flight</inlineHelpText>
    <label>Arrival Flight Date Time</label>
    <type>DateTime</type>
</CustomField>