force-app/main/default/objects/Flight__c/fields/Freight_Arrival_Flight_Origin__c.field-meta.xml
<CustomField>
    <fullName>Freight_Arrival_Flight_Origin__c</fullName>
    <description>Provided by Elenium while raising Exception against Freight Track &amp; Trace.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Freight: Origin of arrival flight</inlineHelpText>
    <label>Arrival Flight Origin</label>
    <length>100</length>
    <type>Text</type>
</CustomField>