force-app/main/default/objects/Flight__c/fields/Freight_Arrival_Flight_Sector__c.field-meta.xml
<CustomField>
    <fullName>Freight_Arrival_Flight_Sector__c</fullName>
    <description>Provided by Elenium while raising Exception against Freight Track &amp; Trace</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Freight: Sector of arrival flight</inlineHelpText>
    <label>Arrival Flight Sector</label>
    <length>100</length>
    <type>Text</type>
</CustomField>