force-app/main/default/objects/Flight__c/fields/Freight_Booked_Flight_Destination__c.field-meta.xml
<CustomField>
    <fullName>Freight_Booked_Flight_Destination__c</fullName>
    <description>Provided by Elenium while raising Exception against Freight Track &amp; Trace</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Freight: Destination of booked flight</inlineHelpText>
    <label>Booked Flight Destination</label>
    <length>100</length>
    <type>Text</type>
</CustomField>