force-app/main/default/objects/Flight__c/recordTypes/Freight_Exception_Flight_Details.recordType-meta.xml
<RecordType>
    <fullName>Freight_Exception_Flight_Details</fullName>
    <active>true</active>
    <description>This record type stores all the Track &amp; Trace Exception Flight Details</description>
    <label>Freight Exception Flight Details</label>
</RecordType>