force-app/main/default/objects/Flight__c/recordTypes/Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Service_Request</fullName>
    <active>true</active>
    <description>This record type stores all the Agency Details of the Flight Object</description>
    <label>Service Request</label>
</RecordType>