force-app/main/default/objects/Flight__c/validationRules/QAC_Flight_no_edit_for_QACWeb_case.validationRule-meta.xml
<ValidationRule>
    <fullName>QAC_Flight_no_edit_for_QACWeb_case</fullName>
    <active>true</active>
    <description>Flight record can&apos;t be edited when the case origin is &apos;QAC Website&apos;</description>
    <errorConditionFormula>AND(RecordType.Name == &apos;Service Request&apos;, AND(ISPICKVAL(Case__r.Origin, &apos;QAC Website&apos;),Case__r.IsClosed == false), 
OR(ISCHANGED(Flight_Number__c),ISCHANGED(Flight_Date__c),ISCHANGED(Cabin_Class__c),ISCHANGED(Fare_Basis__c),ISCHANGED(Departure_Airport__c),ISCHANGED(Departure_Time__c),ISCHANGED(Arrival_Airport__c),ISCHANGED(Arrival_Time__c),ISCHANGED(Arrival_Time__c) ) )</errorConditionFormula>
    <errorMessage>You cannot edit the flight record if Case origin is &apos;QAC Website&apos;</errorMessage>
</ValidationRule>