force-app/main/default/objects/Flight__c/validationRules/QAC_Flight_record_cannot_be_edited.validationRule-meta.xml
<ValidationRule>
    <fullName>QAC_Flight_record_cannot_be_edited</fullName>
    <active>true</active>
    <description>QAC - If the case is closed, flight record cannot be edited.</description>
    <errorConditionFormula>AND(RecordType.Name == &apos;Service Request&apos;, OR(ISPICKVAL(Case__r.Status, &apos;Auto Closed&apos;),ISPICKVAL(Case__r.Status, &apos;Closed&apos;),Case__r.IsClosed == true),   OR(ISCHANGED(Flight_Number__c),ISCHANGED(Flight_Date__c),ISCHANGED(Cabin_Class__c),ISCHANGED(Fare_Basis__c),ISCHANGED(Departure_Airport__c),ISCHANGED(Departure_Time__c),ISCHANGED(Arrival_Airport__c),ISCHANGED(Arrival_Time__c),ISCHANGED(Arrival_Time__c) )    )</errorConditionFormula>
    <errorMessage>You cannot edit the flight record if case status is Closed.</errorMessage>
</ValidationRule>